pkg/provider/kubernetes/gateway/fixtures/httproute/filter_http_headers.yml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: my-gateway-class
spec:
  controllerName: traefik.io/gateway-controller

---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners: # Use GatewayClass defaults for listener definition.
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
            group: gateway.networking.k8s.io
        namespaces:
          from: Same

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: http-app-1
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - "foo.com"
  rules:
    - backendRefs:
        - name: whoami
          port: 80
          weight: 1
          kind: Service
          group: ""
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-My-Header
                value: foo
            add:
              - name: x-my-other-header
                value: bar
              - name: X-Another-Header
                value: baz
            remove:
              - "x-another-header"
